# src/main/java/com/mfa/report/endpoint/rest/model/AuthResponse.java
@@ -1,0 +1,17 @@
+package com.mfa.report.endpoint.rest.model;
+
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+@Data
+public class AuthResponse {
+    private  String token;
+    private String userId;
+    private String directionId;
+}
