# src/main/java/com/mfa/report/endpoint/rest/model/DTO/SignInUserDTO.java
@@ -1,0 +1,21 @@
+package com.mfa.report.endpoint.rest.model.DTO;
+
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+@Data
+public class SignInUserDTO {
+    private String id;
+    private String username;
+    private String lastname;
+    private String firstname;
+    private String password;
+    private String mail;
+    private String directionId;
+}
