# src/main/java/com/mfa/report/endpoint/rest/model/Role.java
@@ -1,0 +1,6 @@
+package com.mfa.report.endpoint.rest.model;
+
+public enum Role {
+    ADMIN,
+    user
+}
